# CRUD-app

./: .gitignore  Database_create.py  Database_interact.py  Interface.py  example.cfg  pyproject.toml
CRUD-app-no-flask/: original_Database_create.py  original_Database_interact.py  original_Interface.py
crud_app/src/: app.py
crud_app_flask/templates/: index.html
crud_app_jrb/: README.md  pyproject.toml
crud_app_jrb/src/crud_app_jrb/: Connection.py  __main__.py  create_example_database.py  dashboard.py  db_interact.py
crud_app_no_flask_jrb/src/crud_app_noFlask_jrb/: __main__.py  original_Database_interact.py  original_Interface.py
src/crud_app/: Database_interact.py  db.py
templates/: index.html
