[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "crud_app_jrb"
version = "0.0.1-dev"
authors = [
    {name = "Jaruba20", email = "fcosalesjavier@gmail.com"}
]
description = "A simple crud app"
readme = "README.md"

requires-python = ">=3.7"
classifiers = [
    "Development Status :: 2 - Pre-Alpha"
]

dependencies = [
    "argparse",
    "configparser",
    "pandas",
    "pymysql",
]

[project.urls]
"Homepage" = "https://github.com/Jaruba20/CRUD-app"

[project.optional-dependencies]
dev = [
    "pytest",
    "black", 
    "ruff",
    "isort",
]

dashboard = [
    "streamlit"
]

